# alx-low_level_programming

./: CMakeLists.txt
0x00-hello_world/: 101-quote.c  README.md
0x01-variables_if_else_while/: 10-print_comb2.c  101-print_comb4.c  3-print_alphabets.c
0x02-functions_nested_loops/: 0-putchar.c  _putchar.c  main.h
0x04-more_functions_nested_loops/: 100-prime_factor.c
0x05-pointers_arrays_strings/: 0-reset_to_98.c  0-strcat.c  1-swap.c  101-keygen.c  2-strlen.c  2-strncpy.c  3-puts.c  3-strcmp.c  4-print_rev.c  4-rev_array.c  5-rev_string.c  5-string_toupper.c  6-cap_string.c  6-puts2.c  7-leet.c  7-puts_half.c  8-print_array.c  8-rot13.c  9-strcpy.c
0x08-recursion/: 100-is_palindrome.c  5-sqrt_recursion.c  6-is_prime_number.c  README.md
0x08-recursion/tests/: 100-palindrome  2-strlen_recursion  5-sqrt  6-prime
0x09-static_libraries/: README.md  main.c
0x0A-argc_argv/: 3-mul.c  README.md  main.h
0x0A-argc_argv/tests/: add  mul
0x0B-malloc_free/: README.md
0x0B-malloc_free/tests/: args
0x0C-more_malloc_free/: 101-mul.c  README.md
0x0C-more_malloc_free/tests/: 0-main.c  1-main.c  2-main.c
0x0D-preprocessor/: README.md
0x0D-preprocessor/tests/: c
0x0E-structures_typedef/: README.md
0x0F-function_pointers/: 3-get_op_func.c  README.md
0x10-variadic_functions/: README.md
0x12-singly_linked_lists/: 0-print_list.c  1-list_len.c  README.md
0x13-more_singly_linked_lists/: 0-print_listint.c  1-listint_len.c  103-find_loop.c  2-add_nodeint.c  3-add_nodeint_end.c  4-free_listint.c  5-free_listint2.c  6-pop_listint.c  README.md  lists.h
0x13-more_singly_linked_lists/tests/: c  d  e  f  g  h  i  j  k  l  m  n  o
0x14-bit_manipulation/: 0-binary_to_uint.c  1-print_binary.c  100-get_endianness.c  2-get_bit.c  3-set_bit.c  4-clear_bit.c  5-flip_bits.c  README.md
0x14-bit_manipulation/tests/: a  b  e
0x15-file_io/: 0-read_textfile.c  1-create_file.c  2-append_text_to_file.c  3-cp.c  README.md
0x15-file_io/tests/: Requiescat  a  b  c  cp
0x17-doubly_linked_lists/: README.md
0x17-doubly_linked_lists/tests/: d  e  h  i  j  k
0x18-dynamic_libraries/: 101-make_me_win.sh  README.md
0x18-dynamic_libraries/tests/: 0-main.c
0x1A-hash_tables/: 0-hash_table_create.c  3-hash_table_set.c  4-hash_table_get.c  5-hash_table_print.c  6-hash_table_delete.c  README.md
0x1A-hash_tables/tests/: d  e  f  g
0x1C-makefiles/: 5-island_perimeter.py
0x1E-search_algorithms/: 1-binary.c
0x1E-search_algorithms/tests/: 1-binary
